# CUDA-at-Scale-Independent-Project

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  SUBMISSION.md
proof/: README.md  summary.csv
proof/outputs/: synthetic_0000.pgm  synthetic_0001.pgm  synthetic_0002.pgm  synthetic_0003.pgm  synthetic_0004.pgm  synthetic_0005.pgm  synthetic_0006.pgm  synthetic_0007.pgm  synthetic_0008.pgm  synthetic_0009.pgm  synthetic_0010.pgm  synthetic_0011.pgm
scripts/: generate_dataset.py  make_contact_sheet.py  run_demo.ps1  run_demo.sh
src/: main.cu
